# aws-pass

./: .rustfmt.toml  Cargo.toml  README.md
src/: main.rs  traits.rs
src/client/: default_sm_client.rs  mod.rs  sm_client.rs
src/client/sm/: default_sm_client.rs  mod.rs  sm_client.rs
src/client/sts/: default_sts_client.rs  mod.rs  sts_client.rs
src/creds/: mod.rs
src/dao/: local_pass_dao.rs  mod.rs  pass_dao.rs  sm_pass_dao.rs
src/macros/: mod.rs
src/store/: default_pass_store.rs  mod.rs  pass_store.rs
src/subcommands/: init.rs  insert.rs  list.rs  mod.rs  show.rs
src/util/: file.rs  mod.rs
