[package]
name = "aws-pass"
version = "0.1.0"
authors = ["Geoff Little <g.little712@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "0.6"
chrono = "0.4"
dirs = "3.0"
edit = "0.1"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rusoto_core = "0.45"
rusoto_secretsmanager = "0.45"
rusoto_sts = "0.45"
structopt = "0.3"
tokio = { version = "0.2.23", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }